# mal-export-for-anilist

./: .gitignore  Cargo.toml  README.md  TODO.md  mal-standard.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: format.yml  release.yml
src/: main.rs  oauth.rs  xmlformat.rs
