[package]
name = "mal-export-for-anilist"
edition = "2021"
version = "0.1.0"
authors = ["lowerednonce"]
description = "A MAL syle anime list exporter for AniList account that uses the official API."
repository = "https://github.com/lowerednonce/mal-export-for-anilist"
homepage = "https://github.com/lowerednonce/mal-export-for-anilist"
documentation = "https://github.com/lowerednonce/mal-export-for-anilist"
license = "CC-BY-NC-4.0"

[dependencies]
chrono = "0.4"
serde_json = ">=1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = ">=0.11.8", features = ["default-tls"] , default-features = false }
